--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@mux/mux-node": "^4.0.0",
     "co": "^4.6.0",
-    "stripe": "^8.198.0"
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "stripe": "^8.198.0",
+    "uuid": "^8.3.2"
   },
   "author": {
     "name": "Luis G. Villegas"
