--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mux/mux-node": "^4.0.0",
+    "aws-sdk": "^2.1084.0",
     "co": "^4.6.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
