--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mux/mux-node": "^4.0.0",
     "aws-sdk": "^2.1084.0",
     "co": "^4.6.0",
+    "react-beautiful-dnd": "^13.1.0",
     "request": "^2.88.2",
     "stripe": "^8.198.0",
     "uuid": "^8.3.2"
