--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@coolstrapiplugins/strapi-plugin-masterclass",
-  "version": "0.0.2",
+  "name": "strapi-plugin-masterclass",
+  "version": "0.0.3",
   "description": "Learning management system",
   "strapi": {
     "name": "masterclass",
@@ -28,6 +28,5 @@
     "npm": ">=6.0.0"
   },
   "license": "MIT",
-  "repository": "https://github.com/coolstrapiplugins/strapi-plugin-masterclass",
-  "homepage": "https://coolstrapiplugins.github.io"
+  "repository": "https://github.com/luisguve/strapi-plugin-masterclass"
 }
